# FirstTaskApp

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
Applications/: CMakeLists.txt
Applications/FirstTaskApp/: CMakeLists.txt  Main.cxx  qFirstTaskAppMainWindow.cxx  qFirstTaskAppMainWindow.h  qFirstTaskAppMainWindow_p.h  slicer-application-properties.cmake
Applications/FirstTaskApp/Widgets/: qAppStyle.cxx  qAppStyle.h
Doc/: DeveloperHowtos.docx  TaskDescription.docx
Modules/FirstTask/: CMakeLists.txt  FirstTask.py
Modules/FirstTask/Resources/UI/: FirstTask.ui
Scripts/Linux/: CommonVars.sh  FirstTask_Debug_Build.sh  FirstTask_Release_Build.sh
Scripts/Windows/: CommonVars.bat  FirstTaskCustomApp_Debug_Build.bat  FirstTaskCustomApp_Debug_LaunchVisualStudio.bat  FirstTaskCustomApp_Release_Build.bat
